Added better file handing

--- a/PA1_template.html
+++ b/PA1_template.html
@@ -65,6 +65,9 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <pre class="r"><code>library(data.table)
 library(ggplot2)
 
+## Unzip file
+unzip('activity.zip')
+## Read in csv
 activityDS &lt;- read.csv('activity.csv')</code></pre>
 </div>
 <div id="processtransform-the-data" class="section level4">
